--- a/Movie/index.html
+++ b/Movie/index.html
@@ -17,7 +17,7 @@
       
     </main>
     <footer class="footer">
-      <p>2024 &copy All rights reserved| Hareesh GT</p>
+      <p>2024 &copy All rights reserved| Ajay Karthick A</p>
     </footer>
     <script src="script.js"></script>
   </body>
